--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,6 +166,7 @@ input {
 /*=============== REUSABLE CSS CLASSES ===============*/
 .section {
   padding: 4.5rem 0 2.5rem;
+  text-align: center;
 }
 
 .section__title {
@@ -174,6 +175,11 @@ input {
   text-align: center;
   text-transform: capitalize;
   margin-bottom: var(--mb-2);
+}
+.section__subtitle{
+  display: block;
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-2-5);
 }
 
 .container {
@@ -291,6 +297,73 @@ input {
   height: 2px;
   bottom: -.75rem;
   left: 0;
+}
+
+/*=====================countdown=====================*/
+
+.countdown__container{
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+.countdown__button{
+  
+  text-align: center;
+
+  
+}
+.countdown__container .block{
+  margin: 0 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: var(--mb-2);
+
+}.countdown__container .block div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--first-color);
+  box-shadow: 0 0 6px 2px #727272 inset;
+  color: var(--white-color);
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-semi-bold);
+  width: 100px;
+  height: 70px;
+  margin-bottom: 10px;
+  border-radius: 1rem;
+}
+/*testimonios*/
+.testimonial__data,
+.testimonial__header{
+  display: flex;
+}
+.testimonial__data{
+  justify-content: space-between;
+  margin-bottom: var(--mb-1);
+}
+.testimonial__img{
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: var(--mb-0-75);
+}
+.testimonial__name{
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+}
+.testimonial__client{
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+.testimonial__description{
+  margin-bottom: var(--mb-2-5);
+}
+.testimonial__icon-star{
+  color:var(--first-color);
+}
+.swiper-container .swiper-pagination-testimonial{
+  bottom: 0;
 }
 /*=============== PRESENTATION ===============*/
 .presentation__container {
@@ -930,6 +1003,15 @@ h2.section__title{
 /*=============== MEDIA QUERIES ===============*/
 /* For small devices */
 @media screen and (max-width: 340px) {
+
+  .countdown__container .block div{
+    
+    width: 55px;
+    height: 55px;
+    margin-bottom: 10px;
+    border-radius: .5rem;
+  }
+
   .place__container {
     grid-template-columns: max-content;
     justify-content: center;
