--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -451,6 +451,7 @@ input {
   right: 0;
   bottom: 1rem;
   width: 228px;
+  border-radius: .5rem;
 }
 
 .home__info-title {
@@ -461,7 +462,7 @@ input {
 }
 
 .home__info-button {
-  font-size: var(--smaller-font-size);
+  font-size: var(--normal-font-size);
 }
 
 .home__info-overlay {
@@ -471,6 +472,7 @@ input {
 .home__info-img {
   width: 145px;
   transition: var(--img-transition);
+  border-radius: .5rem;
 }
 
 .home__info-img:hover {
@@ -574,6 +576,7 @@ h2.section__title{
   color: var(--white-color);
 }
 .button {
+  
   display: inline-block;
   background-color: var(--first-color);
   color: var(--white-color);
@@ -1038,6 +1041,7 @@ h2.section__title{
   .home__info {
     width: 190px;
     padding: 1rem;
+    
   }
   .experience__img,
   .video__container {
