--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,10 +8,10 @@
   /*========== Colors ==========*/
   /* Change favorite color to match images */
   /*Green dark 190 - Green 171 - Grren Blue 200*/
-  --hue-color: 200;
+  --hue-color: 234;
 
   /* HSL color mode */
-  --first-color: hsl(var(--hue-color), 64%, 22%);
+  --first-color: hsl(var(--hue-color), 64%, 27%);
   --first-color-second: hsl(var(--hue-color), 64%, 22%);
   --first-color-alt: hsl(var(--hue-color), 64%, 15%);
   --title-color: hsl(var(--hue-color), 64%, 18%);
@@ -336,34 +336,34 @@ input {
 /*testimonios*/
 .testimonial__data,
 .testimonial__header{
-  display: flex;
+    display: flex;
 }
 .testimonial__data{
-  justify-content: space-between;
-  margin-bottom: var(--mb-1);
+    justify-content: space-between;
+    margin-bottom: var(--mb-1);
 }
 .testimonial__img{
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-right: var(--mb-0-75);
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    margin-right: var(--mb-0-75);
 }
 .testimonial__name{
-  font-size: var(--normal-font-size);
-  font-weight: var(--font-medium);
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
 }
 .testimonial__client{
-  font-size: var(--normal-font-size);
-  color: var(--text-color-light);
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
 }
 .testimonial__description{
-  margin-bottom: var(--mb-2-5);
+    margin-bottom: var(--mb-2-5);
 }
 .testimonial__icon-star{
-  color:var(--first-color);
+    color: var(--first-color);
 }
 .swiper-container .swiper-pagination-testimonial{
-  bottom: 0;
+    bottom: 0;
 }
 /*=============== PRESENTATION ===============*/
 .presentation__container {
@@ -1064,6 +1064,19 @@ h2.section__title{
   .subscribe__form {
     width: 470px;
     margin: 0 auto;
+  }
+  .testimonial__data,
+  .testimonial__header{
+      flex-direction: column;
+      align-items: center;
+  }
+  .testimonial__img{
+      margin-right: 0;
+      margin-bottom: var(--mb-0-25);
+  }
+  .testimonial__data,
+  .testimonial__description{
+      text-align: center;
   }
  
 }
